@@ -47,6 +47,8 @@
 						}
 					 ?>
 				</div><!--end entry-->
+			
+			<?php wp_link_pages(array('before' => 'Pages: ', 'next_or_number' => 'number')); ?>
 				
 			<?php edit_post_link('Edit', '<p>', '</p>'); ?>	
 					
